Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,7 @@
   link: /contact/
   new_window: false
   highlight: false
+- name: Pour nos amis les bêtes
+  link:
+  new_window: false
+  highlight: false
