--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,6 @@
   new_window: false
   highlight: false
 - name: Pour nos amis les bêtes
-  link:
+  link: /cats/
   new_window: false
   highlight: false
