--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,3 +14,7 @@
   link: /cats/
   new_window: false
   highlight: false
+  - name: Pour l'amour vert
+  link: /plants/
+  new_window: false
+  highlight: false
