--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-- name: Products
+- name: Art de la table
   link: /
   new_window: false
   highlight: false
@@ -14,7 +14,7 @@
   link: /cats/
   new_window: false
   highlight: false
-  - name: Pour l'amour vert
+  - name: Pour lamour vert
   link: /plants/
   new_window: false
   highlight: false
