--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,11 +10,11 @@
   link: /contact/
   new_window: false
   highlight: false
-  - name: Plantes
-  link: /plants/
-  new_window: false
-  highlight: false
 - name: Pour nos amis les bêtes
   link: /cats/
+  new_window: false
+  highlight: false
+- name: Editions d'art
+  link: /art/
   new_window: false
   highlight: false
